switched all footers to inline-svgs, removed fixed height on header, svgomg'ed bg-image, fixed safari svg stretching

--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -27,5 +27,5 @@ footer {
 }
 
 .iconbox__item--disabled:hover svg path {
-  fill: var(--secondary-dark);
+  fill: var(--secondary);
 }
